We do not smoke test AGP 7.2 anymore
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>