@@ -345,9 +345,6 @@ abstract class AbstractSmokeTest extends Specification {
             def init = AGP_VERSIONS.createAgpNightlyRepositoryInitScript()
             extraArgs += ["-I", init.canonicalPath]
         }
-        if (agpVersion.startsWith("7.2") && JavaVersion.current().java9Compatible) {
-            runner = runner.withJvmArguments('--add-opens', 'java.logging/java.util.logging=ALL-UNNAMED')
-        }
         return runner.withArguments([runner.arguments, extraArgs].flatten())
     }
 
